Fix alignment of footer logo with signature

--- a/css/style.css
+++ b/css/style.css
@@ -240,17 +240,14 @@
 .footer-content {
   height: 150px;
   padding-top: 50px;
-  margin-bottom: 0;
   padding-bottom: 50px;
 }
 .footer-title {
-  padding-top: 20px;
   margin-bottom: 15px;
   color: #4a5861;
 }
 .footer-desc {
   font-weight: 400;
-  margin-top: 0;
   color: #8a9fae;
 }
 .footer-logo-container {
@@ -267,9 +264,7 @@
   height: 75px;
   width: 100px;
   margin: 0;
-  margin-top: 25px;
   float: right;
   display: inline-block;
 }
-
 
